# tetra-lib

./: CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classes.html  common_8h.html  common_8h.js  common_8h__dep__incl.map  common_8h__dep__incl.md5  common_8h_source.html  dir_000000_000001.html  dir_000003_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_ae5bdaf1b45f3c0e6fd5dd3984d2eafd.html  dir_ae5bdaf1b45f3c0e6fd5dd3984d2eafd.js  dir_b485ae80868baed16097635ed27c0024.html  dir_b485ae80868baed16097635ed27c0024.js  dir_b485ae80868baed16097635ed27c0024_dep.map  dir_b485ae80868baed16097635ed27c0024_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  structtagTEA1__CONTEXT-members.html  structtagTEA1__CONTEXT.html  (+53 more)
.github/workflows/: publish-documentation.yml  run-tests.yml
docs/: CMakeLists.txt  Doxyfile.in
include/: tetra.h
include/details/: common.h  tea1.h  tea2.h  tea3.h
search/: all_1.js  all_2.js  all_3.js  classes_0.js  defines_0.js  files_1.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js
src/details/: tea1.c  tea2.c  tea3.c
tests/: CMakeLists.txt
tests/cases/: tea1.cpp  tea2.cpp  tea3.cpp
tests/coverage/: coverage.cmd.in
tests/include/: test_common.hpp  test_utils.hpp
